# cli-domain-backend

./: .example.env  Dockerfile  README.md  blacklist.json  docker-compose-dev.yml  docker-compose-prd.yml  domain.json  pyproject.toml
app/: __main__.py  logger.py  main.py
app/core/: config.py  deps.py  error.py  pydantic_model.py  redis.py  response.py  string.py  websocket.py
app/entitiy/: domain.py
app/entity/: __init__.py  domain.py  domainlog.py  ticket.py  transfer.py  user.py
app/router/: __init__.py  application.py  auth.py  discord.py  domain.py  hello.py  transfer.py
app/schema/: discord.py  home.py  register.py
app/schemas/: home.py
app/service/: cloudflare.py  container.py  discord.py  discord_interaction.py  discord_old.py  domain.py  email.py  google.py  localdb.py  session.py  transfer.py  vercel.py
static/: app-login.css  login.css
template/: app-login.html  login.html
test/: create_session_token.py
