[tool.poetry]
name = "fastapi-poetry-template"
version = "0.1.0"
description = ""
authors = ["Yuchan Han <serltretu24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
pydantic-settings = "^2.6.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
aiogoogle = "^5.13.2"
dependency-injector = "^4.43.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.22.1"}
redis = "^5.2.1"
slowapi = "^0.1.9"
pyjwt = "^2.10.1"
tinydb = "^4.8.2"
pynacl = "^1.5.0"
discord-py = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
